Replaces classes by records